syntax="proto3";

package ty;

message ReqHeart{
}

message AckHeart{
}

message ReqEcho{
    uint32 id = 1;
	int64 tm =2;
    string data = 3;
}

message AckEcho{
    uint32 code = 1;
    string data = 2;
}

message ReqLogin{
  	uint32 id = 1;
	int64 tm =2;
    string data = 3;
}

message AckLogin{
    uint32 code = 1;
    string data = 2;
}

message ReqLogout{
  	uint32 id = 1;
	int64 tm =2;
    string data = 3;
}

message AckLogout{
    uint32 code = 1;
    string data = 2;
}